<resources>
    <string name="app_name">AndroidGist</string>
    <string name="custom_view">Custom View: CustomCircularProgressBar</string>
    <string name="user_interface_navigation"><![CDATA[User Interface & Navigation]]></string>
    <string name="animations_transitions"><![CDATA[Animations & Transitions]]></string>
    <string name="increase_progress">+10%</string>
    <string name="decrease_progress">-10%</string>
    <string name="jetpack">Jetpack</string>
    <string name="jetpack_livedata">Architecture Components: LiveData</string>
    <string name="jetpack_room">Architecture Components: Room</string>
    <string name="generate_name">Generate Name</string>
    <string name="show_name">Show Name</string>
    <string name="animator_demo"><![CDATA[ValueAnimator & ObjectAnimator Demo]]></string>
    <string name="animator_set_demo">AnimatorSet Demo</string>
    <string name="move_textview_by_value_animator_code">Move TextView By ValueAnimatorCode</string>
    <string name="move_textview_by_value_animator_xml">Move TextView By ValueAnimator XML</string>
    <string name="move_textview_by_object_animator_code">Move TextView By ObjectAnimator Code</string>
    <string name="move_textview_by_object_animator_xml">Move TextView By ObjectAnimator XML</string>
    <string name="click_button_to_move_me">Click Button to move me</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="start_abc">Animation on ABC</string>
    <string name="start_d">Animation on D</string>
    <string name="d">D</string>
    <string name="testing">Testing</string>
    <string name="my_settings">My Settings</string>
    <string name="your_name">Your name:</string>
    <string name="name">Name</string>
    <string name="your_date_of_birth">Your date of birth</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="email">email</string>
    <string name="save">Save</string>
    <string name="revert">Revert</string>
    <string name="start_with_animator">Start with Animator</string>
    <string name="camerax">CameraX</string>
    <string name="add_word">Add word</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
</resources>
