<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AnimatorDemo">


    <Button
        android:id="@+id/btn_move_by_value_animator_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_textview_by_value_animator_code" />

    <Button
        android:id="@+id/btn_move_by_value_animator_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_textview_by_value_animator_xml" />

    <Button
        android:id="@+id/btn_move_by_object_animator_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_textview_by_object_animator_code" />

    <Button
        android:id="@+id/btn_move_by_object_animator_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_textview_by_object_animator_xml" />


    <TextView
        android:id="@+id/tv_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_button_to_move_me" />
</LinearLayout>